--- a/210326-sample.html
+++ b/210326-sample.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>特集&#x3C;br/>え! 委員会っておもしろそう。&#x3C;br/>どうやったら入れるの?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="@vivliostyle/theme-teckbook">
+    <link rel="stylesheet" href="i-theme/theme.css">
   </head>
   <body>
     <section id="特集brえ-委員会っておもしろそう。brどうやったら入れるの">
@@ -37,22 +37,26 @@
         <section id="3．委員会への参加をお待ちしています">
           <h3>3．委員会への参加をお待ちしています</h3>
           <p>ぜひ、興味のある人は委員会の会議に顔を出してください。メーリングリストだけの参加でも大丈夫です。「情報に関するあらゆる問題を取り扱う委員会」ですから、興味を持って参加すれば、何かしらの実りがあると思います。花形王道が苦手な人、ネトゲの達人、アニメ好き、アクアリウムマン……情報問題対策委員会の典型人材に限らない、沢山の人の参加をお待ちしています。</p>
-          <p>
-            これまでのシンポジウム等開催一覧
-            ・2019年10月　電子メールの公文書性とその管理
-            ・2018年 9月　弁護士業務に生かせる情報公開請求
-            ・2017年 9月　監視カメラで逮捕される!?電子情報社会の捜査活動とプライバシー
-            ・2016年 6月　プライバシーをめぐる法律問題-話題のドローンを題材に-
-          </p>
-          <p>▲2017年9月開催 シンポジウム</p>
-          <p>
-            今後の委員会開催日程
-            2月24日（水）15：00〜　@1107・1108会議室
-            3月24日（水）15：00〜　@1107・1108会議室
-            いずれの会議もZoomでご参加いただけます。
-            担当事務局:大阪弁護士会委員会部人権課
-            TEL:06-6364-1227
-          </p>
+          <section id="これまでのシンポジウム等開催一覧">
+            <h4>これまでのシンポジウム等開催一覧</h4>
+            <ul>
+              <li>2019年10月　電子メールの公文書性とその管理</li>
+              <li>2018年 9月　弁護士業務に生かせる情報公開請求</li>
+              <li>2017年 9月　監視カメラで逮捕される!?電子情報社会の捜査活動とプライバシー</li>
+              <li>2016年 6月　プライバシーをめぐる法律問題-話題のドローンを題材に-</li>
+            </ul>
+            <p>▲2017年9月開催 シンポジウム</p>
+            <blockquote>
+              <p>
+                今後の委員会開催日程
+                2月24日（水）15：00〜　@1107・1108会議室
+                3月24日（水）15：00〜　@1107・1108会議室
+                いずれの会議もZoomでご参加いただけます。
+                担当事務局:大阪弁護士会委員会部人権課
+                TEL:06-6364-1227
+              </p>
+            </blockquote>
+          </section>
         </section>
       </section>
     </section>
