--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-<h1>hello</h1>
+<!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <title>特集&#x3C;br/>え! 委員会っておもしろそう。&#x3C;br/>どうやったら入れるの?</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="i-theme/theme.css">
+  </head>
+  <body>
+    <section id="特集brえ-委員会っておもしろそう。brどうやったら入れるの">
+      <h1>特集<br>え! 委員会っておもしろそう。<br>どうやったら入れるの?</h1>
+      <section id="第18回-情報問題対策委員会">
+        <h2>第18回　情報問題対策委員会</h2>
+        <p>情報問題対策委員会　副委員長　南　和行</p>
+        <section id="1．「あらゆる問題」を取り扱う委員会">
+          <h3>1．「あらゆる問題」を取り扱う委員会</h3>
+          <p>
+            私は、同じく弁護士の連れ合いと二人で事務所を経営しています。連れ合いからはよく「情報問題対策委員会ってなんなん?どうせワチャワチャとダベってるだけやろ」と言われます。
+            たしかに「情報問題対策委員会」の文字からは、そもそも何をする委員会なのかサッパリわかりません。私も連れ合いに対して「情報に関する…あらゆる問題を取り扱う委員会…?」というような言葉でしか返すことができません。しかし「あらゆる」なんて言ってしまうと「は?何ソレ?けっきょく具体的には何もないってことちゃうん?」と追い込まれてしまいます。
+            「あらゆる勉強やってるッス」という大学生と、「海洋生物の消化器官の進化過程の分化を勉強していマス」という大学生と、どちらにより強い本気度を見出しますか?
+            ただ、それは揚げ足取りです。なぜなら情報に関しては、もとより世の中のあらゆる事象が、様々な情報により構成されているからです。だから「情報」という看板を掲げた私たちが、「あらゆる」という言葉で私たちの意義を説明することは、もはや必然なのです。
+            要するに大事なのは各論であり、本の背表紙だけを見て読む前から「中身がない」などというのは良くないというお話です。私たち情報問題対策委員会の各論である部会は、第1部会は「電子社会とプライバシー部会」、第2部会は「個人情報保護法制・情報公開法制部会」、さらに第3部会は「情報セキュリティ部会」となっており、部会の名前には、私たちの問題意識が端的に表現されています。
+          </p>
+        </section>
+        <section id="2．情報問題対策委員会的な問題意識">
+          <h3>2．情報問題対策委員会的な問題意識</h3>
+          <p>
+            ここ10年どころか1年いや数か月のスパンで、次々と新しい電子機器やそれを用いた新しい電磁的コミュニケーションが世の中に登場します。そしてそれらは、あっという間に生活に浸透し「普段のツール」となってきます。
+            例えばGPSの位置情報も、ひと昔前はカーナビでしか使わないような印象でした。それが携帯電話やスマートフォンに実装され、マップアプリでの経路検索や、見知らぬ町での宿探しなど、気がついたら「まぁ便利」になりました。
+            ワタクシゴトですが、最近、20代のワカモノから、「友達らとスマホのアプリで常にGPSの位置情報を共有しあっている」「すぐに集合できるし、互いに暇かどうかわかるから便利」という話を聞きました。
+            44才のワタクシはオジサンらしく「キミは、友だち同士でしか、位置情報をシェアしていない気分でも、実際その情報は…そして携帯電話の端末情報を結びつければ…プライバシー権と個人情報は必ずしも同じではないのだけどね…」などという懸念を抱くのでした。
+            人が人である限り、行動の自由や自己決定は尊重され保護されなければならないという価値観（人権思想なり）が共有されているから、私たちは安心して、ある日突然やってくる社会の変化や技術の進歩を受け容れ、それに乗っかって、また次の時代へと船を、いや自転車を漕いでいけるのかもしれません。
+            日常生活で目に見えてキラキラと輝く新しい電子機器や電磁的コミュニケーションが、その場限りではなく、社会の基盤や生活の土台として、私たち一人一人にとって安心したものとなるにはどうしたらいいのか。少なくとも私は、技術を理解し、市場経済における情報の値付けを把握したい。そして何よりも、法制度やその運用は、それら技術や情報の値付けと、私の生身の日常生活を、バランス良く規律しているのか考えたい…。
+            こういったありふれた問題意識を、私たち情報問題対策委員会は、全体委員会や部会の会議で、それぞれ持ち寄り、意見交換し、それぞれの理解を共有し、そして必要であれば知見を得る為に外部に出かけます。私たちのこの問題意識は、これまでも会長声明や意見書の発出、シンポジウムや会員向け研修・勉強会の開催という形で、弁護士会の活動として実を結んできました。また第3部会では弁護士業務における情報セキュリティ意識啓発の動画を作成しました。
+          </p>
+        </section>
+        <section id="3．委員会への参加をお待ちしています">
+          <h3>3．委員会への参加をお待ちしています</h3>
+          <p>ぜひ、興味のある人は委員会の会議に顔を出してください。メーリングリストだけの参加でも大丈夫です。「情報に関するあらゆる問題を取り扱う委員会」ですから、興味を持って参加すれば、何かしらの実りがあると思います。花形王道が苦手な人、ネトゲの達人、アニメ好き、アクアリウムマン……情報問題対策委員会の典型人材に限らない、沢山の人の参加をお待ちしています。</p>
+          <section id="これまでのシンポジウム等開催一覧">
+            <h4>これまでのシンポジウム等開催一覧</h4>
+            <ul>
+              <li>2019年10月　電子メールの公文書性とその管理</li>
+              <li>2018年 9月　弁護士業務に生かせる情報公開請求</li>
+              <li>2017年 9月　監視カメラで逮捕される!?電子情報社会の捜査活動とプライバシー</li>
+              <li>2016年 6月　プライバシーをめぐる法律問題-話題のドローンを題材に-</li>
+            </ul>
+            <p>▲2017年9月開催 シンポジウム</p>
+            <blockquote>
+              <p>
+                今後の委員会開催日程
+                2月24日（水）15：00〜　@1107・1108会議室
+                3月24日（水）15：00〜　@1107・1108会議室
+                いずれの会議もZoomでご参加いただけます。
+                担当事務局:大阪弁護士会委員会部人権課
+                TEL:06-6364-1227
+              </p>
+            </blockquote>
+          </section>
+        </section>
+      </section>
+    </section>
+  </body>
+</html>
