--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>特集&#x3C;br/>え! 委員会っておもしろそう。&#x3C;br/>どうやったら入れるの?</title>
+    <title>特集&#x3C;br/>え! 委員会っておもしろそう。&#x3C;br/>どうやっても入れないの?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="i-theme/theme.css">
   </head>
   <body>
-    <section id="特集brえ-委員会っておもしろそう。brどうやったら入れるの">
-      <h1>特集<br>え! 委員会っておもしろそう。<br>どうやったら入れるの?</h1>
+    <section id="特集brえ-委員会っておもしろそう。brどうやっても入れないの">
+      <h1>特集<br>え! 委員会っておもしろそう。<br>どうやっても入れないの?</h1>
       <section id="第18回-情報問題対策委員会">
         <h2>第18回　情報問題対策委員会</h2>
         <p>情報問題対策委員会　副委員長　南　和行</p>
